# simple_textual_cards_generator

./: .gitignore  README.md  cards.csv  generator.py  pyproject.toml
